Minor layout issues fixed

--- a/cs/src/main/Populate/ElementCatalog/Support/Assets/checkAssets.css
+++ b/cs/src/main/Populate/ElementCatalog/Support/Assets/checkAssets.css
@@ -36,3 +36,13 @@ span.atype {
   color: #9D9D9D;
   font-style: italic;
 }
+
+table td, table th {
+  padding-top: 4px;
+  padding-right: 4px;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  vertical-align: middle;
+  font-size:10px;
+  white-space: normal;
+}
